syntax = "proto3";

import "google/protobuf/empty.proto";
import "rangiffler-countries.proto";

package guru.qa.grpc.rangiffler.grpc;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.rangiffler.grpc";
option java_outer_classname = "RangifflerPhotoProto";

service RangifflerPhotoService {

  rpc AddNewPhoto(Photo) returns (Photo) {}
  rpc DeletePhoto(PhotoIdRequest) returns (google.protobuf.Empty) {}
  rpc EditPhoto(Photo) returns (Photo) {}
  rpc GetPhotosForUser(UsernameRequest) returns(Photos) {}
  rpc GetAllFriendsPhotos (UsernameRequest) returns(Photos) {}
}

message Photo {
  string id = 1;
  string username = 2;
  string description = 3;
  string photo = 4;
  Country country = 5;
}

message UsernameRequest {
  string username = 1;
}

message PhotoIdRequest {
  string id = 1;
}

message Photos {
  repeated Photo photos = 1;
}